# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc_csci046_BJScontainers"
version = "1.0.0"

description = "Binary Search Tree, AVL Tree, and Heap Implementations"
readme = "README.md"
authors = [{ name = "Ben Smith", email = "benjsmith2019@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["binarytree", "avltree", "heap"]
dependencies = [
    "pytest",
    "inspect"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ben-smith23/containers"

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

